# flask-testing

./: app.py  pyproject.toml  settings.py
templates/: create_post.html  delete_post.html  edit_post.html  home.html  show_post.html
