[tool.poetry]
name = "flask-testing"
version = "0.1.0"
description = ""
authors = ["DisasterCooper <bajdukmax@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_testing"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
